package clases;

public class LeerFuncional {
    
}
