package interfaces;

import java.util.List;

import entities.Musica;

public interface IMusicaRepository {
    List<Musica> obtenMusicas();
}
